[package]
name = "map-trait"
version = "0.2.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

description = "Generic Map trait"

repository = "https://github.com/Perseus101/map-trait"

readme = "README.md"

keywords = []

categories = []

license = "MIT OR Apache-2.0"

[dependencies]

[[example]]
name = "last_insert_map"